--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.8.1",
-    "ibm-watson": "^5.7.3",
+    "ibm-watson": "^7.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "npm": "^8.11.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "start": "^5.1.0",
+    "typescript": "^4.7.2",
+    "watson-speech": "^0.39.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
