--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "firebase": "^9.8.1",
     "ibm-watson": "^7.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "start": "^5.1.0",
+    "tunnel": "^0.0.6",
     "typescript": "^4.7.2",
     "watson-speech": "^0.39.1",
     "web-vitals": "^2.1.4"
